--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <ol>
+      <!-- <ol>
         <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
         <li>Output them beneath each other in the AppComponent</li>
         <li>Output a warning or success message in the Components</li>
@@ -11,7 +11,10 @@
       <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
       <hr>
       <app-warning-alert></app-warning-alert>
-      <app-success-alert></app-success-alert>
+      <app-success-alert></app-success-alert> -->
+      <h3>I'm in AppComponent</h3>
+      <hr>
+      <app-servers></app-servers>
     </div>
   </div>
 </div>
